add mobile navbar

--- a/src/app/common/footer.html
+++ b/src/app/common/footer.html
@@ -1,8 +1,9 @@
 <footer class="footer" ng-controller="FooterCtrl">
   <div class="content has-text-centered has-text-light">
     <p>
-      Made by <a href="https://jgthms.com" class="has-text-white has-text-weight-bold">Ivan Shyrai</a> in 2018. The source code is available
-      <a href="http://opensource.org/licenses/mit-license.php" class="has-text-white has-text-weight-bold">here</a>. 
+      Made by <a href="https://ivanshyrai.us" target="_blank" class="has-text-white has-text-weight-bold">Ivan Shyrai</a> in 2018. The
+      source code is available
+      <a href="https://github.com/rawlead/Movilist" target="_blank" class="has-text-white has-text-weight-bold">here</a>.
     </p>
   </div>
 </footer>
