--- a/src/app/common/navbar.html
+++ b/src/app/common/navbar.html
@@ -1,50 +1,55 @@
 <div ng-controller="NavbarCtrl">
-<nav class="navbar is-transparent" change-class-on-scroll offset="200" scroll-class="is-fixed-top" role="navigation" aria-label="main navigation" >
-  <div class="navbar-background"></div>
-  <div class="container">
-    <div class="navbar-brand">
-      <a class="navbar-item" ng-href="{{loggedInUser ? '/#!list/' + loggedInUser.uid : '#!discover'}}">
-        <img src="assets/img/logo.png" width="112" height="28">
-      </a>
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-    <div class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" ng-hide="!loggedInUser" ng-href="{{'/#!list/' + loggedInUser.uid}}">
-          My List
+  <nav class="navbar is-transparent" change-class-on-scroll offset="200" scroll-class="is-fixed-top" role="navigation"
+    aria-label="main navigation">
+    <div class="navbar-background"></div>
+    <div class="container">
+      <div class="navbar-brand">
+        <a class="navbar-item" ng-href="{{loggedInUser ? '/#!list/' + loggedInUser.uid : '#!discover'}}">
+          <img src="assets/img/logo.png" width="112" height="28">
         </a>
-
-        <a class="navbar-item" href="#!discover">
-            Discover
-          </a>
-
-        <a class="navbar-item" href="#!random">
-          Random movie
+        <a role="button" class="navbar-burger burger has-text-white" ng-class="isMobile ? 'is-active' : ''" ng-click="toggleMobile()" aria-label="menu" aria-expanded="false"
+          data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
         </a>
       </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div ng-show="loggedInUser">
-            <div class="buttons">
-            <button class="button is-text" style="cursor: default;">{{loggedInUser.email}}</button>
+      <div class="navbar-menu" ng-class="isMobile ? 'is-active' : ''">
+        <div class="navbar-start">
+          <a class="navbar-item" ng-class="getClass('/list')" ng-hide="!loggedInUser" ng-href="{{'/#!list/' + loggedInUser.uid}}">
+            My List
+          </a>
+          <a class="navbar-item" ng-class="getClass('/discover')" href="#!discover">
+            Discover
+          </a>
+          <a class="navbar-item" href="#!random">
+            Random movie
+          </a>
+        </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div ng-show="loggedInUser">
+              <div class="buttons">
 
-            <button class="button is-white is-outlined" ng-click="handleSignOut()">Sign Out</button>
+
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <button class="button is-text">{{loggedInUser.email}}</button>
+                    <div class="navbar-dropdown">
+                        <button class="button is-warning is-outlined" ng-click="handleSignOut()">Sign Out</button>
+                    </div>
+                  </div>
+              </div>
             </div>
-          </div>
-          <div ng-hide="loggedInUser">
-            <div class="buttons">
-              <a class="button is-warning is-outlined" id="open-modal" ng-click="openAuthForm()">
-                <strong>Sign up | Log in</strong>
-              </a>
+            <div ng-hide="loggedInUser">
+              <div class="buttons">
+                <a class="button is-warning is-outlined" id="open-modal" ng-click="openAuthForm()">
+                  <strong>Sign up | Log in</strong>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 </div>
