--- a/src/app/movie/movie.html
+++ b/src/app/movie/movie.html
@@ -27,7 +27,7 @@
             <h5 class="subtitle has-text-grey-light">{{movie.tagline}}</h5>
             <p>{{movie.overview}}</p>
             <br>
-            <p>Budget: {{movie.budget}}</p>
+            <p>Budget: ${{movie.budget}}</p>
             <p>Vote average: {{movie.vote_average}}</p>
             <p>Release date: {{movie.release_date}}</p>
             <br>
